# OpLabs_Prokopenko_2_semestr

./: ~$лаба 2.docx  ~$лаба 6.docx  ~WRL0003.tmp  лаба 1.docx  лаба 2.docx  лаба 3.docx  лаба 4.docx  лаба 5.docx  лаба 6.docx
laba1 (c++)/: changeText.cpp  example.txt  main.cpp
laba1 (python)/: CMakeLists.txt  example.txt  header.h  main.py
laba2 (c#)/: laba2OP.sln
laba2 (c#)/laba2OP/: Program.cs  WorkWithStruct.cs  Worker.cs  foo.cs  foo2.cs  laba2OP.csproj
laba2 (c#)/laba2OP/Properties/: AssemblyInfo.cs
laba2 (python)/: Worker.py  foo.py  functions.py  main.py  text.json  text.txt  text1.json  text1.txt
laba3/: laba3.sln
laba3/laba3/: Book.cs  Functions.cs  Program.cs  laba3.csproj
laba3/laba3/Properties/: AssemblyInfo.cs
laba4/: laba4.sln
laba4/laba4/: BoolMatrix.cs  Foo.cs  Program.cs  laba4.csproj
laba4/laba4/Properties/: AssemblyInfo.cs
laba5 (c#)/: ConsoleApplication3.sln
laba5 (c#)/ConsoleApplication3/: BankAccount.cs  ConsoleApplication3.csproj  CurrentAccount.cs  Date.cs  DepositAccount.cs  Program.cs  Start.cs
laba5 (c#)/ConsoleApplication3/Properties/: AssemblyInfo.cs
laba5 (python)/: BankAccount.py  main.py
laba6/: laba6.sln
laba6/laba6/: Node.cs  Program.cs  Tree.cs  laba6.csproj
laba6/laba6/Properties/: AssemblyInfo.cs
